Bytt ut tilbakekreving URL og kafka topic for prod (#1104)
### 💰 Hva skal gjøres, og hvorfor?
Gjør så vi går mot den nye instansen av tilbakekreving i produksjon

### 🔎️ Er det noe spesielt du ønsker tilbakemelding om?
Nei

### ✅ Checklist
_Har du husket alle punktene i listen?_
- [ ] Jeg har testet mine endringer i henhold til akseptansekriteriene
🕵️
- [ ] Jeg har config- eller sql-endringer. I så fall, husk manuell
deploy til miljø for å verifisere endringene.
- [ ] Jeg har skrevet tester. Hvis du ikke har skrevet tester, beskriv
hvorfor under 👇

_Jeg har ikke skrevet tester fordi:_ Det er en config endring

### 💬 Ønsker du en muntlig gjennomgang?
- [ ] Ja
- [x] Nei

--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -133,9 +133,9 @@ FAMILIE_PROSESSERING_CLIENT_ID: "dummy"
 FAMILIE_BREV_API_URL: http://familie-brev
 FAMILIE_KLAGE_URL: http://familie-klage
 FAMILIE_KS_INFOTRYGD_API_URL: http://familie-ks-infotrygd
-FAMILIE_TILBAKE_API_URL: http://familie-tilbake/api
-TILBAKEKREVING_REQUEST_TOPIC: teamfamilie.privat-tbk-hentfagsystemsbehandling-request-topic
-TILBAKEKREVING_RESPONSE_TOPIC: teamfamilie.privat-tbk-hentfagsystemsbehandling-respons-topic
+FAMILIE_TILBAKE_API_URL: http://tilbakekreving-backend.tilbake/api
+TILBAKEKREVING_REQUEST_TOPIC: tilbake.privat-tbk-hentfagsystemsbehandling
+TILBAKEKREVING_RESPONSE_TOPIC: tilbake.privat-tbk-hentfagsystemsbehandling-svar
 PDL_URL: http://pdl-api.default
 FAMILIE_INTEGRASJONER_API_URL: http://familie-integrasjoner/api
 FAMILIE_OPPDRAG_API_URL: http://familie-oppdrag/api
