Standarisering av nais-filer.
- rename .deploy -> .nais
- rename preprod -> dev
- bruk kebab-case på filnavn
- bruk miljø-suffiks på filnavn
- standariser mappestrukter i .nais-mappen

--- a/.github/workflows/build-and-deploy-krise-rett-i-prod.yml
+++ b/.github/workflows/build-and-deploy-krise-rett-i-prod.yml
@@ -49,5 +49,5 @@ jobs:
         env:
           APIKEY: ${{ secrets.NAIS_DEPLOY_APIKEY }}
           CLUSTER: prod-gcp
-          RESOURCE: .deploy/nais/app-prod.yaml
+          RESOURCE: .nais/app-prod.yaml
           IMAGE: ${{ needs.bygg-og-push-til-github.outputs.image }}
