--- a/.github/workflows/build-and-deploy-preprod-prod.yml
+++ b/.github/workflows/build-and-deploy-preprod-prod.yml
@@ -72,7 +72,7 @@ jobs:
         env:
           APIKEY: ${{ secrets.NAIS_DEPLOY_APIKEY }}
           CLUSTER: dev-gcp
-          RESOURCE: .deploy/nais/app-preprod.yaml
+          RESOURCE: .nais/app-dev.yaml
           IMAGE: ${{ needs.bygg-og-push-til-github.outputs.image }}
 
   deploy-til-prod:
@@ -85,5 +85,5 @@ jobs:
         env:
           APIKEY: ${{ secrets.NAIS_DEPLOY_APIKEY }}
           CLUSTER: prod-gcp
-          RESOURCE: .deploy/nais/app-prod.yaml
+          RESOURCE: .nais/app-prod.yaml
           IMAGE: ${{ needs.bygg-og-push-til-github.outputs.image }}
