--- a/.github/workflows/deploy-eksisterende-image-rett-i-preprod.yml
+++ b/.github/workflows/deploy-eksisterende-image-rett-i-preprod.yml
@@ -18,5 +18,5 @@ jobs:
         env:
           APIKEY: ${{ secrets.NAIS_DEPLOY_APIKEY }}
           CLUSTER: prod-gcp
-          RESOURCE: .deploy/nais/app-preprod.yaml
+          RESOURCE: .nais/app-dev.yaml
           VAR: image=${{ env.IMAGE }}:${{ inputs.tag }}
