--- a/.github/workflows/new-manual-deploy-with-image.yml
+++ b/.github/workflows/new-manual-deploy-with-image.yml
@@ -23,5 +23,5 @@ jobs:
     with:
       image: ${{ inputs.image }}
       cluster: ${{ inputs.environment }}-gcp
-      resource: .deploy/nais/app-${{ inputs.environment == 'dev' && 'preprod' || inputs.environment }}.yaml
+      resource: .nais/app-${{ inputs.environment }}.yaml
     secrets: inherit
