--- a/.github/workflows/new-main.yaml
+++ b/.github/workflows/new-main.yaml
@@ -8,7 +8,7 @@ on:
 #    paths-ignore:
 #      - '**.md'
 #      - '**.MD'
-#      - '.github/*.yml'
+#      - '.github/*.yaml'
 #      - '.gitignore'
 #      - 'CODEOWNERS'
 #      - 'LICENSE'
@@ -19,7 +19,7 @@ jobs:
       contents: read
       packages: write
       id-token: write
-    uses: navikt/familie-baks-gha-workflows/.github/workflows/build-maven-app.yml@main
+    uses: navikt/familie-baks-gha-workflows/.github/workflows/build-maven-app.yaml@main
     with:
       build-image: true
       push-image: true
@@ -29,7 +29,7 @@ jobs:
     permissions:
       id-token: write
     needs: [ build ]
-    uses: navikt/familie-baks-gha-workflows/.github/workflows/deploy.yml@main
+    uses: navikt/familie-baks-gha-workflows/.github/workflows/deploy.yaml@main
     with:
       image: ${{ needs.build.outputs.image }}
       cluster: dev-gcp
@@ -40,7 +40,7 @@ jobs:
     permissions:
       id-token: write
     needs: [ build, deploy-dev ]
-    uses: navikt/familie-baks-gha-workflows/.github/workflows/deploy.yml@main
+    uses: navikt/familie-baks-gha-workflows/.github/workflows/deploy.yaml@main
     with:
       image: ${{ needs.build.outputs.image }}
       cluster: prod-gcp
