--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -1,17 +1,16 @@
 # Full pipeline on push to main. Build, test, and deploy to dev + prod
 name: Main
 on:
-  workflow_dispatch:
-#  push:
-#    branches:
-#      - 'main'
-#    paths-ignore:
-#      - '**.md'
-#      - '**.MD'
-#      - '.github/*.yaml'
-#      - '.gitignore'
-#      - 'CODEOWNERS'
-#      - 'LICENSE'
+  push:
+    branches:
+      - 'main'
+    paths-ignore:
+      - '**.md'
+      - '**.MD'
+      - '.github/*.yaml'
+      - '.gitignore'
+      - 'CODEOWNERS'
+      - 'LICENSE'
 jobs:
   build:
     name: Build
