--- a/pom.xml
+++ b/pom.xml
@@ -33,7 +33,7 @@
         <springdoc.version>2.8.3</springdoc.version>
 
         <!-- Nav felles -->
-        <felles.version>3.20241121151626_836e7ca</felles.version>
+        <felles.version>3.20250225161902_197977b</felles.version>
         <nav-token-client.version>5.0.14</nav-token-client.version>
         <nav-foedselsnummer.version>1.0-SNAPSHOT.6</nav-foedselsnummer.version>
 
@@ -247,7 +247,6 @@
         <dependency>
             <groupId>no.nav.familie.felles</groupId>
             <artifactId>valutakurs-klient</artifactId>
-            <version>3.20250225154542_d0cf76b</version> <!-- Slett linje så straks tidslinjer er fikset -->
         </dependency>
         <dependency>
             <groupId>no.nav.familie.felles</groupId>
