Splitt deploy workflows, fiks permissions og kun deploy til prod fra main.

--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -12,12 +12,13 @@ on:
       - '.gitignore'
       - 'CODEOWNERS'
       - 'LICENSE'
+
 jobs:
   build:
     name: Build
+    if: github.ref == 'refs/heads/main'
     permissions:
       contents: read
-      packages: write
       id-token: write
     uses: navikt/familie-baks-gha-workflows/.github/workflows/build-maven-app.yaml@main
     with:
