Standarisering av github workflows og nais-config (#1120)
### 💰 Hva skal gjøres, og hvorfor?
Favro:
-
https://favro.com/organization/98c34fb974ce445eac854de0/1844bbac3b6605eacc8f5543?card=NAV-24083
-
https://favro.com/organization/98c34fb974ce445eac854de0/1844bbac3b6605eacc8f5543?card=NAV-24311

Templates ligger her:
https://github.com/navikt/familie-baks-gha-workflows

Endringene innebærer å ta i bruk workflow templates og å standarisere
nais-oppsett. Endringene er som følger:

Workflows:
- Legg til nye workflows med templates. main.yaml, manual-deploy.yaml,
manual-deploy-with.image.yaml.
- Fjerne eksisterende workflows som bygger og deployer app.

Standarisering:
- Endre filnavn fra .yml -> .yaml.
- Bruke kebab-case i stedet for snake_case for config-filer.
- Endre navn på .deploy -> .nais.
- Endre navn på nais-filer til app-<miljø>. Går da vekk fra alternative
navn der det er aktuelt.
- Endre miljønavn fra preprod -> dev.
- Bruke ny mappestruktur .nais-mappen.

### ✅ Checklist
Workflow templates har blitt prøvekjørt i main, men det har vært noen
endringer i etterkant.

### 🔎️ Er det noe spesielt du ønsker tilbakemelding om?
- Er en type oppgave med høy risiko for blingsing, hold helst et ekstra
øye om filstier og filnavn ser riktig ut.
- Det er noen smådetaljer enkelte apper gjør i workflowene sine som er
standarisert vekk. Var disse viktige, si ifra.

### 💬 Ønsker du en muntlig gjennomgang?
Jeg kan gi muntlig gjennomgang for å forklare endringene i mer detalj
hvis ønsket.

Anbefaler å gå commit-for-commit.

--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -2,24 +2,25 @@
 name: Main
 on:
   workflow_dispatch:
-#  push:
-#    branches:
-#      - 'main'
-#    paths-ignore:
-#      - '**.md'
-#      - '**.MD'
-#      - '.github/*.yml'
-#      - '.gitignore'
-#      - 'CODEOWNERS'
-#      - 'LICENSE'
+  push:
+    branches:
+      - 'main'
+    paths-ignore:
+      - '**.md'
+      - '**.MD'
+      - '.github/*.yaml'
+      - '.gitignore'
+      - 'CODEOWNERS'
+      - 'LICENSE'
+
 jobs:
   build:
     name: Build
+    if: github.ref == 'refs/heads/main'
     permissions:
       contents: read
-      packages: write
       id-token: write
-    uses: navikt/familie-baks-gha-workflows/.github/workflows/build-maven-app.yml@main
+    uses: navikt/familie-baks-gha-workflows/.github/workflows/build-maven-app.yaml@main
     with:
       build-image: true
       push-image: true
@@ -29,20 +30,20 @@ jobs:
     permissions:
       id-token: write
     needs: [ build ]
-    uses: navikt/familie-baks-gha-workflows/.github/workflows/deploy.yml@main
+    uses: navikt/familie-baks-gha-workflows/.github/workflows/deploy.yaml@main
     with:
       image: ${{ needs.build.outputs.image }}
       cluster: dev-gcp
-      resource: .deploy/nais/app-preprod.yaml
+      resource: .nais/app-dev.yaml
     secrets: inherit
   deploy-prod:
     name: Deploy prod
     permissions:
       id-token: write
     needs: [ build, deploy-dev ]
-    uses: navikt/familie-baks-gha-workflows/.github/workflows/deploy.yml@main
+    uses: navikt/familie-baks-gha-workflows/.github/workflows/deploy.yaml@main
     with:
       image: ${{ needs.build.outputs.image }}
       cluster: prod-gcp
-      resource: .deploy/nais/app-prod.yaml
+      resource: .nais/app-prod.yaml
     secrets: inherit
