--- a/.github/workflows/manual-deploy-with-image.yaml
+++ b/.github/workflows/manual-deploy-with-image.yaml
@@ -19,9 +19,9 @@ jobs:
     if: inputs.image != ''
     permissions:
       id-token: write
-    uses: navikt/familie-baks-gha-workflows/.github/workflows/deploy.yml@main
+    uses: navikt/familie-baks-gha-workflows/.github/workflows/deploy-with-tag.yaml@main
     with:
-      image: ${{ inputs.image }}
+      image-tag: ${{ inputs.image }}
       cluster: ${{ inputs.environment }}-gcp
-      resource: .deploy/nais/app-${{ inputs.environment == 'dev' && 'preprod' || inputs.environment }}.yaml
+      resource: .nais/app-${{ inputs.environment }}.yaml
     secrets: inherit
