--- a/src/test/resources/application-integrasjonstest.yaml
+++ b/src/test/resources/application-integrasjonstest.yaml
@@ -139,6 +139,9 @@ spring:
         format_sql=false
     hibernate:
       ddl-auto: none
+  sql:
+    init:
+      mode: never #Hindre Spring Boot fra å automatisk laste test.sql - filer i alle tester
 
 AZURE_APP_WELL_KNOWN_URL: http://localhost:${mock-oauth2-server.port}/azuread/.well-known/openid-configuration
 AZURE_OPENID_CONFIG_TOKEN_ENDPOINT: https://login.microsoftonline.com/navq.onmicrosoft.com/oauth2/v2.0/token
