test av sending av epost til egen nav-epost

--- a/src/test/resources/application-postgres.yaml
+++ b/src/test/resources/application-postgres.yaml
@@ -149,3 +149,4 @@ NAIS_APP_NAME: familie-ks-sak
 CRON_FAGSAKSTATUS_SCHEDULER: "0 0/10 * ? * *"
 AZURE_APP_CLIENT_ID: testid
 AZURE_APP_CLIENT_SECRET: testsecret
+AZURE_APP_TENANT_ID: testtenant
