--- a/pom.xml
+++ b/pom.xml
@@ -340,6 +340,16 @@
             <artifactId>unleash-client-java</artifactId>
             <version>${unleash.version}</version>
         </dependency>
+        <dependency>
+            <groupId>com.microsoft.graph</groupId>
+            <artifactId>microsoft-graph</artifactId>
+            <version>6.30.0</version>
+        </dependency>
+        <dependency>
+            <groupId>com.azure</groupId>
+            <artifactId>azure-identity</artifactId>
+            <version>1.15.3</version>
+        </dependency>
 
         <!-- Test -->
         <dependency>
