--- a/.nais/kafka-manager/familie-baks-kafka-manager-dev.yaml
+++ b/.nais/kafka-manager/familie-baks-kafka-manager-dev.yaml
@@ -6,7 +6,7 @@ metadata:
   labels:
     team: teamfamilie
 spec:
-  image: europe-north1-docker.pkg.dev/nais-management-233d/poao/kafka-manager:2025.03.17-10.29-b41c15c # See https://github.com/navikt/kafka-manager/actions
+  image: europe-north1-docker.pkg.dev/nais-management-233d/poao/kafka-manager:2025.03.27-09.51-fae135c # https://console.cloud.google.com/artifacts/docker/nais-management-233d/europe-north1/poao/kafka-manager
   port: 8080
   ingresses:
     - https://familie-baks-kafka-manager.intern.dev.nav.no
