--- a/.github/dependabot.yaml
+++ b/.github/dependabot.yaml
@@ -38,3 +38,7 @@ updates:
     schedule:
       interval: daily
     open-pull-requests-limit: 10
+    groups:
+      workflows:
+        patterns:
+          - "*"
