Legg til byosbom parameter i build-maven-app
Bruker sbom fra cyclonedx for fullstendig dependency-graph

--- a/.github/workflows/manual-deploy-dev.yaml
+++ b/.github/workflows/manual-deploy-dev.yaml
@@ -19,6 +19,7 @@ jobs:
       skip-tests: ${{ inputs.skip-tests }}
       build-image: true
       push-image: true
+      byosbom: target/classes/META-INF/sbom/application.cdx.json
     secrets: inherit
   deploy-with-new-image:
     name: Deploy with new image
