Fiks paths-ignore for main-workflow
Blir mye unødvendige deploys. De gangene en ren workflow-endring vil påvirke prod kan man heller deploye manuelt

--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -8,7 +8,7 @@ on:
     paths-ignore:
       - '**.md'
       - '**.MD'
-      - '.github/*.yaml'
+      - '.github/**.yaml'
       - '.gitignore'
       - 'CODEOWNERS'
       - 'LICENSE'
