Skru på logg-splitting til Elastic og Loki

--- a/.nais/app-dev.yaml
+++ b/.nais/app-dev.yaml
@@ -124,6 +124,10 @@ spec:
   kafka:
     pool: nav-dev
   observability:
+    logging:
+      destinations:
+        - id: elastic
+        - id: loki
     autoInstrumentation:
       enabled: true
       runtime: java
