--- a/.nais/app-prod.yaml
+++ b/.nais/app-prod.yaml
@@ -166,6 +166,10 @@ spec:
   kafka:
     pool: nav-prod
   observability:
+    logging:
+      destinations:
+        - id: elastic
+        - id: loki
     autoInstrumentation:
       enabled: true
       runtime: java
