--- a/.nais/app-dev.yaml
+++ b/.nais/app-dev.yaml
@@ -93,6 +93,8 @@ spec:
           cluster: dev-fss
         - application: familie-klage
           cluster: dev-gcp
+        - application: logging
+          namespace: nais-system
       external:
         - host: nav-dev-kafka-nav-dev.aivencloud.com
         - host: xsrv1mh6.api.sanity.io
