--- a/.github/workflows/deploy-kafka-manager.yaml
+++ b/.github/workflows/deploy-kafka-manager.yaml
@@ -3,6 +3,10 @@ name: Deploy familie-baks-kafka-manager
 on:
   workflow_dispatch:
 
+permissions:
+  contents: "read"
+  id-token: "write"
+
 jobs:
   deploy:
     runs-on: ubuntu-latest
