--- a/.github/dependabot.yaml
+++ b/.github/dependabot.yaml
@@ -29,10 +29,12 @@ updates:
           - "org.springframework*"
           - "no.nav.security*"
           - "org.springdoc*"
+          - "no.nav.familie*"
       utvikler-avhengigheter:
         dependency-type: "development"
         exclude-patterns:
           - "no.nav.security*"
+          - "no.nav.familie*"
   - package-ecosystem: github-actions
     directory: "/"
     schedule:
