Pull request template

--- a/pom.xml
+++ b/pom.xml
@@ -640,7 +640,23 @@
 
     <profiles>
         <profile>
-            <id>jacoco</id>
+            <id>enhetstest</id>
+            <properties>
+                <excludedGroups>integration</excludedGroups>
+                <jacocoTestDirectory>coverage</jacocoTestDirectory>
+                <jacocoFileName>enhetstest.exec</jacocoFileName>
+            </properties>
+        </profile>
+        <profile>
+            <id>integrasjonstest</id>
+            <properties>
+                <groups>integration</groups>
+                <jacocoTestDirectory>coverage</jacocoTestDirectory>
+                <jacocoFileName>integrasjonstest.exec</jacocoFileName>
+            </properties>
+        </profile>
+        <profile>
+            <id>coverage</id>
             <build>
                 <plugins>
                     <plugin>
@@ -655,7 +671,7 @@
                                 </goals>
                                 <configuration>
                                     <destFile>
-                                        ${project.build.directory}/jacoco/${jacocoTestDirectory}/jacoco.exec
+                                        ${project.build.directory}/${jacocoTestDirectory}/${jacocoFileName}
                                     </destFile>
                                 </configuration>
                             </execution>
@@ -666,10 +682,10 @@
                                 </goals>
                                 <configuration>
                                     <dataFile>
-                                        ${project.build.directory}/jacoco/${jacocoTestDirectory}/jacoco.exec
+                                        ${project.build.directory}/${jacocoTestDirectory}/${jacocoFileName}
                                     </dataFile>
                                     <outputDirectory>
-                                        ${project.build.directory}/jacoco/${jacocoTestDirectory}
+                                        ${project.build.directory}/${jacocoTestDirectory}
                                     </outputDirectory>
                                     <formats>
                                         <format>XML</format>
