--- a/.github/workflows/build-pr.yaml
+++ b/.github/workflows/build-pr.yaml
@@ -1,126 +1,57 @@
 name: Pull request
 on:
+  workflow_dispatch:
+  merge_group:
   pull_request:
     types: [opened, synchronize, reopened, ready_for_review]
 
-permissions:
-  contents: read
-  actions: read
-  checks: write
+concurrency:
+  group: ${{ github.workflow }}-${{ github.ref_name }}
+  cancel-in-progress: true
 
 jobs:
-  avslutt-andre-workflows-samme-branch:
-    name: Avslutt andre workflows på samme branch
-    runs-on: ubuntu-latest
-    permissions:
-      actions: write
-    steps:
-      - name: Cancel Previous Runs
-        uses: styfle/cancel-workflow-action@85880fa0301c86cca9da44039ee3bb12d3bedbfa # ratchet:styfle/cancel-workflow-action@0.12.1
-        with:
-          access_token: ${{ github.token }}
-
   ktlint:
     name: Ktlint
-    runs-on: ubuntu-latest
     permissions:
       contents: read
-    steps:
-      - uses: actions/checkout@08c6903cd8c0fde910a37f88322edcfb5dd907a8 # ratchet:actions/checkout@v4
-      - uses: actions/setup-java@dded0888837ed1f317902acf8a20df0ad188d165 # ratchet:actions/setup-java@v4
-        with:
-          java-version: "21"
-          distribution: 'temurin'
-          cache: 'maven'
-      - name: Kjør ktlint
-        env:
-          GITHUB_USERNAME: x-access-token
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        run: |
-          mvn -B --no-transfer-progress antrun:run@ktlint
+    uses: navikt/familie-baks-gha-workflows/.github/workflows/ktlint.yaml@pull-request # ratchet:exclude
+    secrets: inherit
 
-  enhetstester:
-    name: Enhetstester
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@08c6903cd8c0fde910a37f88322edcfb5dd907a8 # ratchet:actions/checkout@v4
-      - uses: actions/setup-java@dded0888837ed1f317902acf8a20df0ad188d165 # ratchet:actions/setup-java@v4
-        with:
-          java-version: "21"
-          distribution: 'temurin'
-          cache: 'maven'
-      - name: Kjør enhetstester
-        env:
-          GITHUB_USERNAME: x-access-token
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        run: |
-          mvn verify -B --no-transfer-progress --settings .m2/maven-settings.xml --file pom.xml -Dsurefire.rerunFailingTestsCount=2 -DexcludedGroups=integrationTest -Pjacoco -DjacocoTestDirectory=UT
-      - name: Last opp Jacoco enhetstester rapport
-        uses: actions/upload-artifact@ea165f8d65b6e75b540449e92b4886f43607fa02 # ratchet:actions/upload-artifact@v4
-        with:
-          name: jacocoUT
-          path: target/jacoco/UT/jacoco.xml
-          retention-days: 1
-          overwrite: true
+  unit-test:
+    name: Unit test
+    permissions:
+      contents: read
+      id-token: write
+    uses: navikt/familie-baks-gha-workflows/.github/workflows/pull-request-maven.yaml@pull-request # ratchet:exclude
+    with:
+      profile: 'enhetstest'
+      with-coverage: ${{ github.actor != 'dependabot[bot]' && github.event_name != 'merge_group' && true || false }}
+      coverage-artifact-name: 'enhetstest'
+      coverage-artifact-path: 'target/coverage/enhetstest.exec'
+    secrets: inherit
 
-  integrasjonstester:
-    name: Integrasjonstester
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@08c6903cd8c0fde910a37f88322edcfb5dd907a8 # ratchet:actions/checkout@v4
-      - uses: actions/setup-java@dded0888837ed1f317902acf8a20df0ad188d165 # ratchet:actions/setup-java@v4
-        with:
-          java-version: "21"
-          distribution: 'temurin'
-          cache: 'maven'
-      - name: Kjør integrasjonstester
-        env:
-          GITHUB_USERNAME: x-access-token
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        run: |
-          mvn verify -B --no-transfer-progress --settings .m2/maven-settings.xml --file pom.xml -Dgroups=integrationTest -Dsurefire.rerunFailingTestsCount=2 -Pjacoco -DjacocoTestDirectory=IT
-      - name: Last opp Jacoco integrasjonstester rapport
-        uses: actions/upload-artifact@ea165f8d65b6e75b540449e92b4886f43607fa02 # ratchet:actions/upload-artifact@v4
-        with:
-          name: jacocoIT
-          path: target/jacoco/IT/jacoco.xml
-          retention-days: 1
-          overwrite: true
+  integration-test:
+    name: Integration test
+    permissions:
+      contents: read
+      id-token: write
+    uses: navikt/familie-baks-gha-workflows/.github/workflows/pull-request-maven.yaml@pull-request # ratchet:exclude
+    with:
+      profile: 'integrasjonstest'
+      with-coverage: ${{ github.actor != 'dependabot[bot]' && github.event_name != 'merge_group' && true || false }}
+      coverage-artifact-name: 'integrasjonstest'
+      coverage-artifact-path: 'target/coverage/integrasjonstest.exec'
+    secrets: inherit
 
   sonar:
-    if: github.actor != 'dependabot[bot]'
+    if: github.actor != 'dependabot[bot]' && github.event_name != 'merge_group'
     name: Sonar
-    runs-on: ubuntu-latest
-    needs: [enhetstester, integrasjonstester]
-    steps:
-      - uses: actions/checkout@08c6903cd8c0fde910a37f88322edcfb5dd907a8 # ratchet:actions/checkout@v4
-        with:
-          fetch-depth: 0
-      - uses: actions/setup-java@dded0888837ed1f317902acf8a20df0ad188d165 # ratchet:actions/setup-java@v4
-        with:
-          java-version: 21
-          distribution: 'temurin'
-          cache: 'maven'
-      - name: Last ned Jacoco UT rapport
-        uses: actions/download-artifact@634f93cb2916e3fdff6788551b99b062d0335ce0 # ratchet:actions/download-artifact@v4
-        with:
-          name: jacocoUT
-          path: jacoco/UT
-      - name: Last ned Jacoco IT rapport
-        uses: actions/download-artifact@634f93cb2916e3fdff6788551b99b062d0335ce0 # ratchet:actions/download-artifact@v4
-        with:
-          name: jacocoIT
-          path: jacoco/IT
-      - name: Cache Sonar packages
-        uses: actions/cache@0400d5f644dc74513175e3cd8d07132dd4860809 # ratchet:actions/cache@v4
-        with:
-          path: ~/.sonar/cache
-          key: ${{ runner.os }}-sonar
-          restore-keys: ${{ runner.os }}-sonar
-      - name: Kjør Sonar
-        env:
-          GITHUB_USERNAME: x-access-token
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
-        run: |
-          mvn sonar:sonar -Dsonar.coverage.jacoco.xmlReportPaths="jacoco/UT/jacoco.xml,jacoco/IT/jacoco.xml"
+    needs: [ unit-test, integration-test ]
+    uses: navikt/familie-baks-gha-workflows/.github/workflows/sonar.yaml@pull-request # ratchet:exclude
+    with:
+      unit-test-artifact-name: 'enhetstest'
+      unit-test-artifact-path: 'coverage/enhetstest'
+      integration-test-artifact-name: 'integrasjonstest'
+      integration-test-artifact-path: 'coverage/integrasjonstest'
+    secrets: inherit
+
