--- a/.nais/app-prod.yaml
+++ b/.nais/app-prod.yaml
@@ -38,7 +38,9 @@ spec:
           - name: cloudsql.enable_pgaudit
             value: "true"
           - name: pgaudit.log
-            value: 'write'
+            value: "write"
+          - name: "pgaudit.log_parameter"
+            value: "on"
   azure:
     application:
       enabled: true
