--- a/.github/workflows/pull-request.yaml
+++ b/.github/workflows/pull-request.yaml
@@ -21,7 +21,7 @@ jobs:
     name: Unit test
     permissions:
       contents: read
-      id-token: write
+      actions: write
     uses: navikt/familie-baks-gha-workflows/.github/workflows/pull-request-maven.yaml@pull-request # ratchet:exclude
     with:
       profile: 'enhetstest'
@@ -34,7 +34,7 @@ jobs:
     name: Integration test
     permissions:
       contents: read
-      id-token: write
+      actions: write
     uses: navikt/familie-baks-gha-workflows/.github/workflows/pull-request-maven.yaml@pull-request # ratchet:exclude
     with:
       profile: 'integrasjonstest'
