--- a/.nais/app-prod.yaml
+++ b/.nais/app-prod.yaml
@@ -53,7 +53,7 @@ spec:
           - id: "54cd86b8-2e23-48b2-8852-b05b5827bb0f"  # VEILEDER_ROLLE
           - id: "e40090eb-c2fb-400e-b412-e9084019a73b"  # SAKSBEHANDLER_ROLLE
           - id: "4e7f23d9-5db1-45c0-acec-89c86a9ec678"  # BESLUTTER_ROLLE
-          - id: "3d718ae5-f25e-47a4-b4b3-084a97604c1d"  # teamfamilie-forvaltning
+          - id: "024bfb25-ead3-4c04-bbe1-1db3d3362188"  # teamfamilie-baks-forvaltning
       replyURLs:
         - "https://familie-ks-sak.intern.nav.no/swagger-ui/oauth2-redirect.html"
       singlePageApplication: true
