--- a/.github/workflows/pull-request.yaml
+++ b/.github/workflows/pull-request.yaml
@@ -14,15 +14,14 @@ jobs:
     name: Ktlint
     permissions:
       contents: read
-    uses: navikt/familie-baks-gha-workflows/.github/workflows/ktlint.yaml@pull-request # ratchet:exclude
+    uses: navikt/familie-baks-gha-workflows/.github/workflows/ktlint.yaml@main # ratchet:exclude
     secrets: inherit
 
   unit-test:
     name: Unit test
     permissions:
       contents: read
-      actions: write
-    uses: navikt/familie-baks-gha-workflows/.github/workflows/pull-request-maven.yaml@pull-request # ratchet:exclude
+    uses: navikt/familie-baks-gha-workflows/.github/workflows/pull-request-maven.yaml@main # ratchet:exclude
     with:
       profile: 'enhetstest'
       with-coverage: ${{ github.actor != 'dependabot[bot]' && github.event_name != 'merge_group' && true || false }}
@@ -34,8 +33,7 @@ jobs:
     name: Integration test
     permissions:
       contents: read
-      actions: write
-    uses: navikt/familie-baks-gha-workflows/.github/workflows/pull-request-maven.yaml@pull-request # ratchet:exclude
+    uses: navikt/familie-baks-gha-workflows/.github/workflows/pull-request-maven.yaml@main # ratchet:exclude
     with:
       profile: 'integrasjonstest'
       with-coverage: ${{ github.actor != 'dependabot[bot]' && github.event_name != 'merge_group' && true || false }}
@@ -47,7 +45,7 @@ jobs:
     if: github.actor != 'dependabot[bot]' && github.event_name != 'merge_group'
     name: Sonar
     needs: [ unit-test, integration-test ]
-    uses: navikt/familie-baks-gha-workflows/.github/workflows/sonar.yaml@pull-request # ratchet:exclude
+    uses: navikt/familie-baks-gha-workflows/.github/workflows/sonar.yaml@main # ratchet:exclude
     with:
       unit-test-artifact-name: 'enhetstest'
       unit-test-artifact-path: 'coverage/enhetstest'
