--- a/.github/workflows/pull-request.yaml
+++ b/.github/workflows/pull-request.yaml
@@ -18,8 +18,8 @@ jobs:
     uses: navikt/familie-baks-gha-workflows/.github/workflows/ktlint.yaml@main # ratchet:exclude
     secrets: inherit
 
-  unit-test:
-    name: Unit test
+  enhetstest:
+    name: Enhetstest
     permissions:
       contents: read
     uses: navikt/familie-baks-gha-workflows/.github/workflows/pull-request-maven.yaml@main # ratchet:exclude
@@ -30,8 +30,8 @@ jobs:
       coverage-artifact-path: 'target/coverage/enhetstest.exec'
     secrets: inherit
 
-  integration-test:
-    name: Integration test
+  integrasjonstest:
+    name: Integrasjonstest
     permissions:
       contents: read
     uses: navikt/familie-baks-gha-workflows/.github/workflows/pull-request-maven.yaml@main # ratchet:exclude
@@ -45,7 +45,7 @@ jobs:
   sonar:
     if: github.actor != 'dependabot[bot]' && github.event_name != 'merge_group'
     name: Sonar
-    needs: [ unit-test, integration-test ]
+    needs: [ enhetstest, integrasjonstest ]
     uses: navikt/familie-baks-gha-workflows/.github/workflows/sonar.yaml@main # ratchet:exclude
     with:
       unit-test-artifact-name: 'enhetstest'
