--- a/.nais/app-dev.yaml
+++ b/.nais/app-dev.yaml
@@ -29,7 +29,7 @@ spec:
         tier: db-custom-1-3840
         name: familie-ks-sak
         autoBackupHour: 2
-        pointInTimeRecovery: true
+        pointInTimeRecovery: false
         diskAutoresize: true
         highAvailability: false
         databases:
