oppgradere til postgres 17 database i dev

--- a/.nais/app-dev.yaml
+++ b/.nais/app-dev.yaml
@@ -25,9 +25,9 @@ spec:
     path: /internal/prometheus
   gcp: # Database
     sqlInstances:
-      - type: POSTGRES_14 # IF This is changed, all data will be lost. Read on nais.io how to upgrade
+      - type: POSTGRES_17 # IF This is changed, all data will be lost. Read on nais.io how to upgrade
         tier: db-custom-1-3840
-        name: familie-ks-sak
+        name: familie-ks-sak-17
         autoBackupHour: 2
         pointInTimeRecovery: false
         diskAutoresize: true
