--- a/pom.xml
+++ b/pom.xml
@@ -23,7 +23,7 @@
 
         <!-- Java/Kotlin -->
         <java.version>21</java.version>
-        <kotlin.version>2.2.10</kotlin.version>
+        <kotlin.version>2.2.21</kotlin.version>
         <kotlin.compiler.languageVersion>2.0</kotlin.compiler.languageVersion>
         <kotlin.compiler.apiVersion>2.0</kotlin.compiler.apiVersion>
         <kotlinx.version>1.10.2</kotlinx.version>
@@ -438,18 +438,6 @@
             <artifactId>junit-platform-suite</artifactId>
             <scope>test</scope>
         </dependency>
-        <dependency>
-            <groupId>com.ninja-squad</groupId>
-            <artifactId>springmockk</artifactId>
-            <version>${springmockk.version}</version>
-            <scope>test</scope>
-            <exclusions>
-                <exclusion>
-                    <groupId>org.mockito</groupId>
-                    <artifactId>mockito-core</artifactId>
-                </exclusion>
-            </exclusions>
-        </dependency>
     </dependencies>
 
     <repositories>
@@ -596,6 +584,7 @@
                                 <source>${project.basedir}/src/test/integrasjonstester/kotlin</source>
                                 <source>${project.basedir}/src/test/enhetstester/kotlin</source>
                                 <source>${project.basedir}/src/test/common</source>
+                                <source>${project.basedir}/src/test/testdata/kotlin</source>
                             </sources>
                         </configuration>
                     </execution>
